crates/nash-parse/src/snapshots/nash_parse__module__tests__module_preserves_annotation_name_error.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\nf : int\ng = 1"
---
Declarations(
    Def(
        "f",
        NameMatch(
            "g",
            2,
            2,
        ),
        1,
        2,
    ),
    1,
    1,
)
