crates/nash-parse/src/snapshots/nash_parse__module__tests__module_preserves_expression_error.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\nvalue = if True then 42"
---
Declarations(
    Def(
        "value",
        Body(
            If(
                Else(
                    1,
                    24,
                ),
                1,
                9,
            ),
            1,
            9,
        ),
        1,
        6,
    ),
    1,
    1,
)
