crates/nash-parse/src/snapshots/nash_parse__module__tests__module_preserves_import_alias_error.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\nimport Cardano.Tx as tx"
---
ImportAlias(
    1,
    22,
)
