crates/nash-parse/src/snapshots/nash_parse__module__tests__module_preserves_pattern_error.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\nf (x as) = x"
info: diagnostic
---
nash::syntax

  × Expected a variable after `as`.
   ╭─[src/Main.nash:1:8]
 1 │ f (x as) = x
   ·        ─
   ╰────
  help: Name the whole matched value, as in `(pattern as name)`.
